--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="timeline__container wrapper flex flex-col items-center w-[1170px] mx-auto p-0 relative max-[1200px]:w-[1004px] max-md:w-[750px] max-sm:w-full max-sm:max-w-[600px] box-border">
 
                 <div class="timeline__mid mb-[20px] max-sm:px-[15px] flex flex-col items-center align-middle w-full max-w-[1030px] mt-[30px]">
-                    <div class="timeline__mid_row max-md:p-[25px_0] timeline__entry_point" style="--timeline-height: 1515px; --timeline-height-dynamic: 145.03720238095238px;">
+                    <div class="timeline__mid_row max-md:p-[25px_0] timeline__entry_point" style="">
                         <div class="timeline__row_center_step absolute left-1/2 ml-[-30px] w-[60px] h-[60px] rounded-[50%] bg-[#ff699f] border-[15px] border-[#2f0147] z-10 viewing"></div>
                         <div class="timeline__mid_week_box w-[39%] text-right mt-[10px] max-md:w-[44%] max-md:mt-[12px] max-sm:float-right max-sm:text-left max-sm:m-0">
                             
