--- a/slider.html
+++ b/slider.html
@@ -4,19 +4,109 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Slider</title>
-	<!-- Add the slick-theme.css if you want default styling -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-	<!-- Add the slick-theme.css if you want default styling -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-	<link rel="stylesheet" href="css/modal-video.min.css">
-	<link rel="stylesheet" href="slider.css">
 
+
+	<!-- ABN Slider Section Stylesheets -->
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 	<style>
-		* {
-			margin: 0;
-			padding: 0;
+	    @keyframes modal-video{from{opacity:0}to{opacity:1}}@keyframes modal-video-inner{from{transform:translate(0, 100px)}to{transform:translate(0, 0)}}.modal-video{position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,0.5);z-index:1000000;cursor:pointer;opacity:1;animation-timing-function:ease-out;animation-duration:.3s;animation-name:modal-video;-webkit-transition:opacity .3s ease-out;-moz-transition:opacity .3s ease-out;-ms-transition:opacity .3s ease-out;-o-transition:opacity .3s ease-out;transition:opacity .3s ease-out}.modal-video-close{opacity:0}.modal-video-close .modal-video-movie-wrap{-webkit-transform:translate(0, 100px);-moz-transform:translate(0, 100px);-ms-transform:translate(0, 100px);-o-transform:translate(0, 100px);transform:translate(0, 100px)}.modal-video-body{max-width:940px;width:100%;height:100%;margin:0 auto;display:table}.modal-video-inner{display:table-cell;vertical-align:middle;width:100%;height:100%}.modal-video-movie-wrap{width:100%;height:0;position:relative;padding-bottom:56.25%;background-color:#333;animation-timing-function:ease-out;animation-duration:.3s;animation-name:modal-video-inner;-webkit-transform:translate(0, 0);-moz-transform:translate(0, 0);-ms-transform:translate(0, 0);-o-transform:translate(0, 0);transform:translate(0, 0);-webkit-transition:-webkit-transform .3s ease-out;-moz-transition:-moz-transform .3s ease-out;-ms-transition:-ms-transform .3s ease-out;-o-transition:-o-transform .3s ease-out;transition:transform .3s ease-out}.modal-video-movie-wrap iframe{position:absolute;top:0;left:0;width:100%;height:100%}.modal-video-close-btn{position:absolute;z-index:2;top:-35px;right:-35px;display:inline-block;width:35px;height:35px;overflow:hidden;border:none;background:transparent}.modal-video-close-btn:before{transform:rotate(45deg)}.modal-video-close-btn:after{transform:rotate(-45deg)}.modal-video-close-btn:before,.modal-video-close-btn:after{content:'';position:absolute;height:2px;width:100%;top:50%;left:0;margin-top:-1px;background:#fff;border-radius:5px;margin-top:-6px}
+	</style>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+		.abn-popup-slider {
+			overflow: hidden;
+		}
+
+		/* the slides */
+		.abn-popup-slider .slick-slide {
+		    margin: 0 15px;
+		}
+
+		/* the parent */
+		.abn-popup-slider .slick-list {
+			margin: 0 -15px;
+		}
+
+		.abn-slide-item-area {}
+
+		.abn-image-box {
+		    position: relative;
+		}
+
+		.abn-image-box img {
+			width: 100%;
+		}
+
+		.abn-user-info {
+		    position: absolute;
+		    top: 20px;
+		    left: 20px;
+		    z-index: 2;
+		}
+
+		.abn-user-info h4 {
+		    color: #FFFFFF;
+		    font-size: 24px;
+		    font-family: "Montserrat", sans-serif;
+		    line-height: 1.4;
+		    margin-bottom: 2px;
+		}
+
+		.abn-user-info p {
+		    color: #FFFFFF;
+		    position: relative;
+		    font-size: 17.64px;
+		    font-family: "Montserrat", sans-serif;
+		    line-height: 1.4;
+		    display: inline-block;
+		}
+
+		.abn-user-info p:before {
+		    position: absolute;
+		    content: "";
+		    width: calc(100% + 15px);
+		    height: 1px;
+		    top: -2px;
+		    left: 0;
+		    z-index: 5;
+		    background: #FFFFFF;
+		}
+
+		.abn-video-play {
+		    position: absolute;
+		    z-index: 5;
+		    left: 20px;
+		    bottom: 20px;
+		}
+
+		.abn-video-play img {
+		    width: 60px;
+		    height: 60px;
+		}
+
+		.abn-doctor-content {}
+
+		.abn-doctor-content h3 {
+		    color: #121212;
+		    margin: 24px 0 16px;
+		    font-size: 22px;
+		    font-family: "Montserrat", sans-serif;
+		    line-height: 1.4;
+		    text-transform: uppercase;
+		}
+
+		.abn-doctor-content p {
+		    color: #121212;
+		    font-size: 20px;
+		    font-family: "Montserrat", sans-serif;
+		    font-weight: 400;
+		    font-style: italic;
 		}
 	</style>
+
 </head>
 <body>
 
@@ -24,7 +114,7 @@
 	<section class="abn-popup-slider">
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-1.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. Natalia Ratmiroff DMD</h4>
 					<p>Licensed Dentist</p>
@@ -42,7 +132,7 @@
 		</div>
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-2.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. John Cairns DMD</h4>
 					<p>Licensed Dentist</p>
@@ -60,7 +150,7 @@
 		</div>
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-3.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. Mehak Kaul DMD</h4>
 					<p>Licensed Periodontist</p>
@@ -78,7 +168,7 @@
 		</div>
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-4.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. David Lesansky DMD</h4>
 					<p>Licensed Dentist</p>
@@ -96,7 +186,7 @@
 		</div>
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-5.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. Kathleen Navarro</h4>
 					<p>Licensed Dentist</p>
@@ -114,7 +204,7 @@
 		</div>
 		<div class="abn-slide-item-area">
 			<div class="abn-image-box">
-				<img src="images/doctor-6.png" alt="">
+				<img src="https://img.funnelish.com/68712/688816/1745482054-3.webp" alt="">
 				<div class="abn-user-info">
 					<h4>Dr. Brian McAll, DMD</h4>
 					<p>Licensed Dentist</p>
@@ -133,8 +223,12 @@
 	</section>
 
 
+
+	<!-- ABN Slider Section Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="js/modal-video.min.js"></script>
+	<script>
+	    "use strict";var _typeof=typeof Symbol==="function"&&typeof Symbol.iterator==="symbol"?function(obj){return typeof obj}:function(obj){return obj&&typeof Symbol==="function"&&obj.constructor===Symbol&&obj!==Symbol.prototype?"symbol":typeof obj};(function umd(factory){"use strict";if(typeof define==="function"&&define.amd){define(["jquery"],factory)}else if((typeof exports==="undefined"?"undefined":_typeof(exports))==="object"){module.exports=factory(require("jquery"))}else{factory(jQuery)}})(function modalVideo($){var defaults={channel:"youtube",youtube:{autoplay:1,cc_load_policy:1,color:null,controls:1,disablekb:0,enablejsapi:0,end:null,fs:1,h1:null,iv_load_policy:1,list:null,listType:null,loop:0,modestbranding:null,origin:null,playlist:null,playsinline:null,rel:0,showinfo:1,start:0,wmode:"transparent",theme:"dark"},ratio:"16:9",vimeo:{api:false,autopause:true,autoplay:true,byline:true,callback:null,color:null,height:null,loop:false,maxheight:null,maxwidth:null,player_id:null,portrait:true,title:true,width:null,xhtml:false},allowFullScreen:true,animationSpeed:300,classNames:{modalVideo:"modal-video",modalVideoClose:"modal-video-close",modalVideoBody:"modal-video-body",modalVideoInner:"modal-video-inner",modalVideoIframeWrap:"modal-video-movie-wrap",modalVideoCloseBtn:"modal-video-close-btn"},aria:{openMessage:"You just openned the modal video",dismissBtnMessage:"Close the modal by clicking here"}};function getQueryString(obj){var url="";for(var key in obj){if(obj.hasOwnProperty(key)){if(obj[key]!==null){url+=key+"="+obj[key]+"&"}}}return url.substr(0,url.length-1)}function getYoutubeUrl(youtube,videoId){var query=getQueryString(youtube);return"https://www.youtube.com/embed/"+videoId+"?"+query}function getVimeoUrl(vimeo,videoId){var query=getQueryString(vimeo);return"https://player.vimeo.com/video/"+videoId+"?"+query}function getVideoUrl(opt,videoId){if(opt.channel==="youtube"){return getYoutubeUrl(opt.youtube,videoId)}else if(opt.channel==="vimeo"){return getVimeoUrl(opt.vimeo,videoId)}}function getPadding(ratio){var arr=ratio.split(":");var width=Number(arr[0]);var height=Number(arr[1]);var padding=height*100/width;return padding+"%"}function getHtml(opt,videoId){var videoUrl=getVideoUrl(opt,videoId);var padding=getPadding(opt.ratio);return'\n\t\t\t\t\t<div class="'+opt.classNames.modalVideo+'" tabindex="-1" role="dialog" aria-label="'+opt.aria.openMessage+'">\n\t\t\t\t\t\t<div class="'+opt.classNames.modalVideoBody+'">\n\t\t\t\t\t\t\t<div class="'+opt.classNames.modalVideoInner+'">\n\t\t\t\t\t\t\t\t<div class="'+opt.classNames.modalVideoIframeWrap+'" style="padding-bottom:'+padding+'">\n\t\t\t\t\t\t\t\t\t<button class="'+opt.classNames.modalVideoCloseBtn+' js-modal-video-dismiss-btn" aria-label="'+opt.aria.dismissBtnMessage+"\"/>\n\t\t\t\t\t\t\t\t\t<iframe width='460' height='230' src=\""+videoUrl+"\" frameborder='0' allowfullscreen="+opt.allowFullScreen+' tabindex="-1"/>\n\t\t\t\t\t\t\t\t</div>\n\t\t\t\t\t\t\t</div>\n\t\t\t\t\t\t</div>\n\t\t\t\t\t</div>\n\t\t\t'}$.fn.modalVideo=function(opt){opt=$.extend({},defaults,opt);$(this).each(function(){if(!$(this).data("video-id")){$(this).data("video-id",opt.videoId)}});$(this).click(function(){var $me=$(this);var videoId=$me.data("video-id");var html=getHtml(opt,videoId);var $modal=$(html);var $btn=$modal.find(".js-modal-video-dismiss-btn");var speed=opt.animationSpeed;$("body").append($modal);$modal.focus();$modal.on("click",function(){var $self=$(this);$self.addClass(opt.classNames.modalVideoClose);$self.off("click");$self.off("keydown");$btn.off("click");setTimeout(function(){$self.remove();$me.focus()},speed)});$btn.on("click",function(){$modal.trigger("click")});$modal.on("keydown",function(e){if(e.which===9){e.preventDefault();if($modal.is(":focus")){$btn.focus()}else{$modal.attr("aria-label","");$modal.focus()}}})})}});
+	</script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script>
 		$('.abn-popup-slider').slick({
@@ -178,7 +272,6 @@
 		$(".js-video-button-1").modalVideo();
 		$(".js-video-button-2").modalVideo();
 		$(".js-video-button-3").modalVideo();
-
 	</script>
 	
 </body>
