--- a/success-stories.html
+++ b/success-stories.html
@@ -169,7 +169,7 @@
 		@media only screen and (max-width: 1024px) {
 
 			.abn-success-stories {
-			    padding: 40px 80px;
+			    padding: 56px 80px 76px;
 			}
 			.abn-success-stories-slider .slick-prev:before, 
 			.abn-success-stories-slider .slick-next:before {
@@ -179,7 +179,7 @@
 
 		@media only screen and (max-width: 767px) {
 			.abn-success-stories {
-			    padding: 40px 20px;
+			    padding: 56px 20px 96px;
 			}
 			.abn-ss-container-wrapper {
 			    display: block;
