--- a/slider.html
+++ b/slider.html
@@ -7,6 +7,7 @@
 
 
 	<!-- ABN Slider Section Stylesheets -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 	<style>
@@ -144,6 +145,8 @@
 		.abn-popup-slider .slick-arrow {
 		    width: 48px;
 		    height: 48px;
+		    background: #4fa2ae;
+		    border-radius: 50%;
 		}
 
 		.abn-popup-slider .slick-prev {
@@ -160,9 +163,11 @@
 
 		.abn-popup-slider .slick-prev:before, 
 		.abn-popup-slider .slick-next:before {
-		    font-size: 58px;
-		    opacity: 1;
-		    color: #4fa2ae;
+		    content: none;
+		}
+		.abn-popup-slider i {
+		    font-size: 21px;
+		    color: #FFFFFF;
 		}
 		.abn-slide-item-area {}
 
@@ -459,6 +464,8 @@
 			speed: 300,
 			slidesToShow: 2,
 			slidesToScroll: 1,
+			prevArrow: "<button type='button' class='slick-prev pull-left'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
+            nextArrow: "<button type='button' class='slick-next pull-right'><i class='fa fa-angle-right' aria-hidden='true'></i></button>",
 			responsive: [
 		    {
 		        breakpoint: 1024,
@@ -470,7 +477,7 @@
 		    	}
 		    },
 		    {
-		        breakpoint: 767,
+		        breakpoint: 840,
 				settings: {
 					slidesToShow: 1,
 					slidesToScroll: 1
