--- a/success-stories.html
+++ b/success-stories.html
@@ -333,7 +333,7 @@
 	<script>
 		$('.abn-success-stories-slider').slick({
 			dots: true,
-			infinite: true,
+			infinite: false,
 			autoplay: false,
 			speed: 300,
 			slidesToShow: 5,
