--- a/red-light.html
+++ b/red-light.html
@@ -19,6 +19,7 @@
 
 		.abn-red-light-section {
 		    padding: 96px 20px;
+		    overflow: hidden;
 		}
 		.abn-container-wrapper {
 		    max-width: 1284px;
@@ -109,6 +110,7 @@
 		/* the parent */
 		.abn-redl-slider .slick-list {
 			margin: 0 -15px;
+			margin-right: -66vh;
 		}
 		.abn-redl-slider ul.slick-dots {
 		    width: 200px;
@@ -242,6 +244,18 @@
 		    font-style: italic;
 		}
 
+		@media only screen and (max-width: 1500px) {
+			.abn-redl-slider .slick-list {
+			    margin-right: -48vh;
+			}
+		}
+
+		@media only screen and (max-width: 1280px) {
+			.abn-redl-slider .slick-list {
+			    margin-right: -30vh;
+			}
+		}
+
 		@media only screen and (max-width: 1024px) {
 
 			.abn-red-light-section {
@@ -334,6 +348,13 @@
 			.abn-redl-content {
 			    min-width: 100%;
 			}
+			.abn-redl-slider .slick-list {
+			    margin: 0 -10px;
+		        margin-right: -44vh;
+		    }
+		    .abn-redl-slider .slick-slide {
+			    margin: 0 10px;
+			}
 
 		}
 
@@ -387,7 +408,7 @@
 			infinite: true,
 			autoplay: false,
 			speed: 300,
-			slidesToShow: 2,
+			slidesToShow: 3,
 			slidesToScroll: 1,
 			prevArrow: "<button type='button' class='slick-prev pull-left'><i class='fa fa-angle-left' aria-hidden='true'></i></button>",
             nextArrow: "<button type='button' class='slick-next pull-right'><i class='fa fa-angle-right' aria-hidden='true'></i></button>",
@@ -395,7 +416,7 @@
 		    {
 		        breakpoint: 1024,
 		    	settings: {
-					slidesToShow: 2,
+					slidesToShow: 3,
 					slidesToScroll: 1,
 					infinite: true,
 					dots: true
@@ -404,14 +425,14 @@
 		    {
 		        breakpoint: 767,
 				settings: {
-					slidesToShow: 1,
+					slidesToShow: 2,
 					slidesToScroll: 1
 				}
 		    },
 		    {
 				breakpoint: 480,
 				settings: {
-					slidesToShow: 1,
+					slidesToShow: 2,
 					slidesToScroll: 1
 				}
 		    }
